--- a/spil.html
+++ b/spil.html
@@ -11,7 +11,7 @@
     <div id="screen">
         <div id="game">
             <div id="background">
-                <img id="background_sprite" src="baggrund.avif" alt="???">
+                <img id="background_sprite" src="https://img.freepik.com/free-vector/desert-landscape-with-mountains-cactuses-red-dry-ground-sunrise-vector-cartoon-illustration-hot-american-mexican-desert-with-rocks-plants-saguaro-clouds-sky_107791-10267.jpg?t=st=1676371341~exp=1676371941~hmac=be2d6454e9190c4e6cbbf96ad7e225f6b92c04cfb0731f458eb047d073deb14d" alt="???">
             </div>
             <div id="elements">
 
