--- a/spil.html
+++ b/spil.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clicker</title>
-    <link rel="stylesheet" href="spil.css">
-</head>
-<body>
+    <link rel="stylesheet" href="spil.css" />
+  </head>
+  <body>
     <div id="screen">
-        <div id="game">
-            <div id="background"></div>
-            <div id="elements">
-                <p>hej</p>
-                <div id="element1"> </div>
-                <div id="element2"> </div>
-                <div id="element3"> </div>
-                <div id="element4"> </div>
-
-            </div>
-            <div id="ui">
-                <!-- <img src="time.png" >
-                <img src="score.png" >
-                <img src="hp.png" > -->
-
-            </div>
+      <div id="game">
+        <div id="background"></div>
+        <div id="elements">
+          <p>hej</p>
+          <div id="element1"></div>
+          <div id="element2"></div>
+          <div id="element3"></div>
+          <div id="element4"></div>
         </div>
-        <div id="start"></div>
-        <div id="game_over"></div>
-        <div id="level_complete"></div>
+        <div id="ui">
+            <img src="time" >
+            <img src="score" >
+            <img src="hp" >
+        </div>
+      </div>
+      <div id="start"></div>
+      <div id="game_over"></div>
+      <div id="level_complete"></div>
     </div>
-</body>
+  </body>
 </html>
