Added some graphics

--- a/spil.html
+++ b/spil.html
@@ -12,16 +12,36 @@
       <div id="game">
         <div id="background"></div>
         <div id="elements">
-          <p>hej</p>
-          <div id="element1"></div>
-          <div id="element2"></div>
-          <div id="element3"></div>
-          <div id="element4"></div>
+          <div id="water_container">
+            <img id="water_sprite" src="grafik/water-container.png">
+          </div>
+          <div id="banana_container">
+            <img id="banana_sprite" src="grafik/banana1.png">
+          </div>
+          <div id="fuel_container">
+            <img id="fuel_sprite" src="">
+          </div>
+          <div id="air_container">
+            <img id="air_sprite" src="grafik/oxygen-tank.png">
+          </div>
+          <div id="fuel_container">
+            <img src="grafik/gasoline.png">
+          </div>
         </div>
-        <div id="ui">
+        <!-- <div id="ui">
             <img src="time" >
             <img src="score" >
-            <img src="hp" >
+            <img src="hp" > -->
+        </div>
+        <div id="source">
+          Background designed by brgfx / Freepik
+          Banana designed by brgfx / Freepik
+          Rotten banana designed by brgfx / Freepik
+          Air container designed by brgfx / Freepik
+          Alien designed by brgfx / Freepik
+          Fuel container designed by Roundicons / Freepik
+          Water bottle designed by rawpixel.com / Freepik
+
         </div>
       </div>
       <div id="start"></div>
