--- a/spil.html
+++ b/spil.html
@@ -29,7 +29,7 @@
             <img id="alien_sprite" class="bad" src="grafik/monster.png" />
           </div>
           <div id="rotten_container" class="falling">
-            <img id="rotten_sprite" class="bad" src="" src="" />
+            <img id="rotten_sprite" class="bad" src="grafik/rotten_b.png" />
           </div>
         </div>
         <!-- <div id="ui">
@@ -41,7 +41,6 @@
           <p>
             Background designed by brgfx / Freepik <br />
             Banana designed by rawpixel.com / Freepik <br />
-            Rotten banana designed by brgfx / Freepik <br />
             Air container designed by Flaticons / Freepik <br />
             Alien designed by Smashicons / Freepik <br />
             Fuel container designed by Roundicons / Freepik <br />
