--- a/spil.html
+++ b/spil.html
@@ -13,23 +13,23 @@
       <div id="game">
         <div id="background"></div>
         <div id="elements">
-          <div id="water_container" class="falling">
-            <img id="water_sprite" class="good" src="grafik/water1.png" />
+          <div id="water_container" class="falling1">
+            <img id="water_sprite" class="rotate2" src="grafik/water1.png" />
           </div>
-          <div id="banana_container" class="falling">
-            <img id="banana_sprite" class="good" src="grafik/banana1.png" />
+          <div id="banana_container" class="falling1">
+            <img id="banana_sprite" class="rotate2" src="grafik/banana1.png" />
           </div>
-          <div id="air_container" class="falling">
-            <img id="air_sprite" class="good" src="grafik/oxygen-tank.png" />
+          <div id="air_container" class="falling1">
+            <img id="air_sprite" class="rotate2" src="grafik/oxygen-tank.png" />
           </div>
-          <div id="fuel_container" class="falling">
-            <img id="fuel_sprite" class="good" src="grafik/gasoline.png" />
+          <div id="fuel_container" class="falling1">
+            <img id="fuel_sprite" class="rotate2" src="grafik/gasoline.png" />
           </div>
-          <div id="alien_container" class="falling">
-            <img id="alien_sprite" class="bad" src="grafik/monster.png" />
+          <div id="alien_container" class="falling1">
+            <img id="alien_sprite" class="rotate2" src="grafik/monster.png" />
           </div>
-          <div id="rotten_container" class="falling">
-            <img id="rotten_sprite" class="bad" src="grafik/rotten_b.png" />
+          <div id="rotten_container" class="falling2">
+            <img id="rotten_sprite" class="rotate2" src="grafik/rotten_b.png" />
           </div>
         </div>
         <!-- <div id="ui">
@@ -52,5 +52,6 @@
       <div id="game_over"></div>
       <div id="level_complete"></div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
