--- a/spil.html
+++ b/spil.html
@@ -13,30 +13,43 @@
       <div id="game">
         <div id="background"></div>
         <div id="elements">
-          <div id="water_container" class="falling1">
-            <img id="water_sprite" class="rotate2" src="grafik/water1.png" />
+          <div id="water_container" class="">
+            <img id="water_sprite" class="" src="grafik/water1.png" />
           </div>
-          <div id="banana_container" class="falling1">
-            <img id="banana_sprite" class="rotate2" src="grafik/banana1.png" />
+          <div id="banana_container" class="">
+            <img id="banana_sprite" class="" src="grafik/banana1.png" />
           </div>
-          <div id="air_container" class="falling1">
-            <img id="air_sprite" class="rotate2" src="grafik/oxygen-tank.png" />
+          <div id="air_container" class="">
+            <img id="air_sprite" class="" src="grafik/oxygen-tank.png" />
           </div>
-          <div id="fuel_container" class="falling1">
-            <img id="fuel_sprite" class="rotate2" src="grafik/gasoline.png" />
+          <div id="fuel_container" class="">
+            <img id="fuel_sprite" class="" src="grafik/gasoline.png" />
           </div>
-          <div id="alien_container" class="falling1">
-            <img id="alien_sprite" class="rotate2" src="grafik/monster.png" />
+          <div id="alien_container" class="">
+            <img id="alien_sprite" class="" src="grafik/monster.png" />
           </div>
-          <div id="rotten_container" class="falling2">
-            <img id="rotten_sprite" class="rotate2" src="grafik/rotten_b.png" />
+          <div id="rotten_container" class="">
+            <img id="rotten_sprite" class="" src="grafik/rotten_b.png" />
           </div>
         </div>
-        <!-- <div id="ui">
-            <img src="time" >
-            <img src="score" >
-            <img src="hp" > -->
-        <!-- </div> -->
+        <div id="ui">
+          <div id="score_board">
+            <img id="score_image" src="grafik/product-bag.png" />
+            <span id="score_count">0</span>
+          </div>
+          <div id="time_board">
+            <img id="time_count" src="grafik/sand-clock.png" />
+          </div>
+          <div id="hp_board">
+            <img id="hp1" src="grafik/astronaut.png" />
+            <img id="hp2" src="grafik/astronaut.png" />
+            <img id="hp3" src="grafik/astronaut.png" />
+          </div>
+          <div id="accuracy_board">
+            <img src="grafik/dart-board.png">
+            <span id="accuracy_count">100%</span>
+          </div>
+        </div>
         <div id="source">
           <p>
             Background designed by brgfx / Freepik <br />
@@ -45,6 +58,10 @@
             Alien designed by Smashicons / Freepik <br />
             Fuel container designed by Roundicons / Freepik <br />
             Water bottle designed by rawpixel.com / Freepik <br />
+            Astronaut designed by Flaticon / Freepik <br>
+            Bag designed by Flaticon / Freepik
+            Hourglass designed by Icongeek26 / Freepik
+
           </p>
         </div>
       </div>
