Added variables + full movement + click events +  accuracy score

--- a/spil.html
+++ b/spil.html
@@ -41,13 +41,13 @@
             <img id="time_count" src="grafik/sand-clock.png" />
           </div>
           <div id="hp_board">
-            <img id="hp1" src="grafik/astronaut.png" />
-            <img id="hp2" src="grafik/astronaut.png" />
-            <img id="hp3" src="grafik/astronaut.png" />
+            <img id="hp1" class="alivege" src="grafik/astronaut.png" />
+            <img id="hp2" class="alivege" src="grafik/astronaut.png" />
+            <img id="hp3" class="alivege" src="grafik/astronaut.png" />
           </div>
           <div id="accuracy_board">
             <img src="grafik/dart-board.png">
-            <span id="accuracy_count">100%</span>
+            <span id="accuracy_count">100.00%</span>
           </div>
         </div>
         <div id="source">
