--- a/spil.html
+++ b/spil.html
@@ -52,6 +52,7 @@
         </div>
         <div id="source">
           <p>
+            Start screen designed by upklyak / Freepik <br />
             Background designed by brgfx / Freepik <br />
             Banana designed by rawpixel.com / Freepik <br />
             Air container designed by Flaticons / Freepik <br />
