En hel masse forkortelse. If og queryselectorALL

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
       <div id="game">
         <div id="background"></div>
         <div id="elements">
-          <div id="water_container" class="container">
-            <img id="water_sprite" class="" src="grafik/water1.png" />
+          <div id="water_container" class="good container">
+            <img id="water_sprite" class="sprite" src="grafik/water1.png" />
           </div>
-          <div id="banana_container" class="container">
-            <img id="banana_sprite" class="" src="grafik/banana1.png" />
+          <div id="banana_container" class="good container">
+            <img id="banana_sprite" class="sprite" src="grafik/banana1.png" />
           </div>
-          <div id="air_container" class="container">
-            <img id="air_sprite" class="" src="grafik/oxygen-tank.png" />
+          <div id="air_container" class="good container">
+            <img id="air_sprite" class="sprite" src="grafik/oxygen-tank.png" />
           </div>
-          <div id="fuel_container" class="container">
-            <img id="fuel_sprite" class="" src="grafik/gasoline.png" />
+          <div id="fuel_container" class="good container">
+            <img id="fuel_sprite" class="sprite" src="grafik/gasoline.png" />
           </div>
-          <div id="alien_container" class="container">
-            <img id="alien_sprite" class="" src="grafik/monster.png" />
+          <div id="alien_container" class="container bad">
+            <img id="alien_sprite" class="sprite" src="grafik/monster.png" />
           </div>
-          <div id="rotten_container" class="container">
-            <img id="rotten_sprite" class="" src="grafik/rotten_b.png" />
+          <div id="rotten_container" class="container bad">
+            <img id="rotten_sprite" class="sprite" src="grafik/rotten_b.png" />
           </div>
         </div>
         <div id="ui">
