added .random, css, lines and falls

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
           <div id="fuel_container" class="good container">
             <img id="fuel_sprite" class="sprite" src="grafik/gasoline.png" />
           </div>
-          <div id="alien_container" class="container bad">
-            <img id="alien_sprite" class="sprite" src="grafik/monster.png" />
+          <div id="alien_container1" class="container bad">
+            <img id="alien_sprite1" class="sprite" src="grafik/monster.png" />
+          </div>
+          <div id="alien_container2" class="container bad">
+            <img id="alien_sprite2" class="sprite" src="grafik/monster.png" />
           </div>
           <div id="rotten_container" class="container bad">
             <img id="rotten_sprite" class="sprite" src="grafik/rotten_b.png" />
