--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
             Alien designed by Smashicons / Freepik <br />
             Fuel container designed by Roundicons / Freepik <br />
             Water bottle designed by rawpixel.com / Freepik <br />
-            Astronaut designed by Flaticon / Freepik <br>
-            Bag designed by Flaticon / Freepik
-            Hourglass designed by Icongeek26 / Freepik
+            Astronaut designed by Flaticon / Freepik <br />
+            Bag designed by Flaticon / Freepik <br />
+            Hourglass designed by Icongeek26 / Freepik <br />
+            Sound effects from Pixabay <br />
 
           </p>
         </div>
       </div>
-      <div id="start" class="hidden">
+      <div id="start" class="">
         <h2>ASTEROID SCAVENGER</h2>
         <button id="press_start">START</button>
       </div>
@@ -84,6 +85,13 @@
         <button id="win_over">Go again?</button>
       </div>
     </div>
+    <audio id="sound_background" src="sounds/background.mp3"> </audio>
+    <audio id="sound_buttonHover" src="sounds/bomb.mp3"> </audio>
+    <audio id="sound_clickGood" src="sounds/gameOver.mp3"> </audio>
+    <audio id="sound_clickAlien" src="sounds/tada.mp3"> </audio>
+    <audio id="sound_clickRotten" src="sounds/tada.mp3"> </audio>
+    <audio id="sound_win" src="sounds/dreams.mp3"> </audio>
+    <audio id="sound_lose" src="sounds/dreams.mp3"> </audio>
     <script src="script.js"></script>
   </body>
 </html>
