--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
       </div>
     </div>
     <audio id="sound_background" src="sounds/background.mp3"> </audio>
-    <audio id="sound_buttonHover" src="sounds/bomb.mp3"> </audio>
+    <audio id="sound_buttonHover" src="sounds/buttonHover.mp3"> </audio>
     <audio id="sound_clickGood" src="sounds/gameOver.mp3"> </audio>
     <audio id="sound_clickAlien" src="sounds/tada.mp3"> </audio>
     <audio id="sound_clickRotten" src="sounds/tada.mp3"> </audio>
-    <audio id="sound_win" src="sounds/dreams.mp3"> </audio>
-    <audio id="sound_lose" src="sounds/dreams.mp3"> </audio>
+    <audio id="sound_win" src="sounds/won.mp3"> </audio>
+    <audio id="sound_lose" src="sounds/lost.mp3"> </audio>
     <script src="script.js"></script>
   </body>
 </html>
