--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <div id="fuel_container" class="good container">
             <img id="fuel_sprite" class="sprite" src="grafik/gasoline.png" />
           </div>
-          <div id="alien_container1" class="container bad">
+          <div id="alien_container1" class="container alien bad">
             <img id="alien_sprite1" class="sprite" src="grafik/monster.png" />
           </div>
-          <div id="alien_container2" class="container bad">
+          <div id="alien_container2" class="container alien bad">
             <img id="alien_sprite2" class="sprite" src="grafik/monster.png" />
           </div>
-          <div id="rotten_container" class="container bad">
+          <div id="rotten_container" class="container fast bad">
             <img id="rotten_sprite" class="sprite" src="grafik/rotten_b.png" />
           </div>
         </div>
@@ -86,10 +86,14 @@
       </div>
     </div>
     <audio id="sound_background" src="sounds/background.mp3"> </audio>
-    <audio id="sound_buttonHover" src="sounds/buttonHover.mp3"> </audio>
-    <audio id="sound_clickGood" src="sounds/gameOver.mp3"> </audio>
-    <audio id="sound_clickAlien" src="sounds/tada.mp3"> </audio>
-    <audio id="sound_clickRotten" src="sounds/tada.mp3"> </audio>
+    <audio id="sound_button" src="sounds/button.mp3"> </audio>
+    <audio id="sound_good1" src="sounds/good1.mp3"> </audio>
+    <audio id="sound_good2" src="sounds/good2.mp3"> </audio>
+    <audio id="sound_good3" src="sounds/good3.mp3"> </audio>
+    <audio id="sound_water" src="sounds/water.mp3"> </audio>
+    <audio id="sound_alien" src="sounds/alien.mp3"> </audio>
+    <audio id="sound_yuck1" src="sounds/yuck1.mp3"> </audio>
+    <audio id="sound_yuck2" src="sounds/yuck2.mp3"> </audio>
     <audio id="sound_win" src="sounds/won.mp3"> </audio>
     <audio id="sound_lose" src="sounds/lost.mp3"> </audio>
     <script src="script.js"></script>
