game over, level complete og css

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img id="hp3" class="alivege" src="grafik/astronaut.png" />
           </div>
           <div id="accuracy_board">
-            <img src="grafik/dart-board.png"/>
+            <img src="grafik/dart-board.png" />
             <span id="accuracy_count">???</span>
           </div>
         </div>
@@ -69,37 +69,39 @@
             Astronaut designed by Flaticon / Freepik <br />
             Bag designed by Flaticon / Freepik <br />
             Hourglass designed by Icongeek26 / Freepik <br />
+            level_complete screen designed by brgfx / Freepik<br />
+            game_over screen designed by gstudioimagen1 / Freepik<br />
             Sound effects from Pixabay <br />
           </p>
         </div>
       </div>
       <div id="start" class="">
         <h2>ASTEROID SCAVENGER</h2>
-        <button id="press_start" class="">START</button>
+        <button id="press_start" class="alivege">START</button>
       </div>
       <div id="game_over" class="hidden">
         <h2>cya loser 😎</h2>
         <h3 id="final_score1"></h3>
-        <button id="lose_over" class="">Go again?</button>
+        <button id="lose_over" class="alivege">Go again?</button>
       </div>
       <div id="level_complete" class="hidden">
         <h2>YOU WIN 🙌👍</h2>
         <h3 id="final_score2"></h3>
-        <button id="win_over" class="">Go again?</button>
+        <button id="win_over" class="alivege">Go again?</button>
       </div>
     </div>
     <div id="sound">
-    <audio id="sound_background" src="sounds/background.mp3"></audio>
-    <audio id="sound_button" src="sounds/button.mp3"></audio>
-    <audio id="sound_good1" src="sounds/good1.mp3"></audio>
-    <audio id="sound_good2" src="sounds/good2.mp3"></audio>
-    <audio id="sound_good3" src="sounds/good3.mp3"></audio>
-    <audio id="sound_water" src="sounds/water.mp3"></audio>
-    <audio id="sound_alien" src="sounds/alien.mp3"></audio>
-    <audio id="sound_yuck1" src="sounds/yuck1.mp3"></audio>
-    <audio id="sound_yuck2" src="sounds/yuck2.mp3"></audio>
-    <audio id="sound_win" src="sounds/won.mp3"></audio>
-    <audio id="sound_lose" src="sounds/lost.mp3"></audio>
+      <audio id="sound_background" src="sounds/background.mp3"></audio>
+      <audio id="sound_button" src="sounds/button.mp3"></audio>
+      <audio id="sound_good1" src="sounds/good1.mp3"></audio>
+      <audio id="sound_good2" src="sounds/good2.mp3"></audio>
+      <audio id="sound_good3" src="sounds/good3.mp3"></audio>
+      <audio id="sound_water" src="sounds/water.mp3"></audio>
+      <audio id="sound_alien" src="sounds/alien.mp3"></audio>
+      <audio id="sound_yuck1" src="sounds/yuck1.mp3"></audio>
+      <audio id="sound_yuck2" src="sounds/yuck2.mp3"></audio>
+      <audio id="sound_win" src="sounds/won.mp3"></audio>
+      <audio id="sound_lose" src="sounds/lost.mp3"></audio>
     </div>
     <script src="script.js"></script>
   </body>
