--- a/index.html
+++ b/index.html
@@ -83,11 +83,13 @@
         <h2>cya loser 😎</h2>
         <h3 id="final_score1"></h3>
         <button id="lose_over" class="alivege">Go again?</button>
+        <button id="start_over1" class="">Main menu</button>
       </div>
       <div id="level_complete" class="hidden">
         <h2>YOU WIN 🙌👍</h2>
         <h3 id="final_score2"></h3>
         <button id="win_over" class="alivege">Go again?</button>
+        <button id="start_over2" class="">Main menu</button>
       </div>
     </div>
     <div id="sound">
