--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
         <h2>ASTEROID SCAVENGER</h2>
         <div>Your ship crashed on an asteroid orbiting the intergalactic highway <br> 
         Collect the necessary items in order to survive and escape <br>
-        Avoid the hostile aliens to stay alive </div>
+        Avoid the hostile aliens at all cost</div>
         <button id="press_start" class="buttonPulse">START</button>
       </div>
       <div id="game_over" class="hidden">
-        <h2>cya loser 😎</h2>
+        <h2>You lose 😢</h2>
         <div id="final_score1"></div>
         <button id="lose_over" class="buttonPulse">Go again?</button>
-        <button id="start_over1" class="buttonPulse"> Main menu LOSE</button>
+        <button id="start_over1" class="buttonPulse"> Main menu</button>
       </div>
       <div id="level_complete" class="hidden">
         <h2>YOU WIN 🙌👍</h2>
         <div id="final_score2"></div>
         <button id="win_over" class="buttonPulse">Go again?</button>
-        <button id="start_over2" class="buttonPulse">Main menu WIN</button>
+        <button id="start_over2" class="buttonPulse">Main menu</button>
       </div>
     </div>
     <div id="sound">
