--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <div id="start" class="">
         <h2>ASTEROID SCAVENGER</h2>
-        <div>Your ship crashed on an asteroid orbiting the intergalactic highway <br> 
+        <div>Your ship has crashed on an asteroid orbiting the intergalactic highway <br> 
         Collect the necessary items in order to survive and escape <br>
         Avoid the hostile aliens at all cost</div>
         <button id="press_start" class="buttonPulse">START</button>
