Highscores and stuff

--- a/index.html
+++ b/index.html
@@ -85,15 +85,19 @@
       </div>
       <div id="game_over" class="hidden">
         <h2>You lose 😢</h2>
-        <div id="final_score1"></div>
-        <button id="lose_over" class="buttonPulse">Go again?</button>
-        <button id="start_over1" class="buttonPulse"> Main menu</button>
+        <div id="score_lose"></div>
+        <div id="final_lose"></div>
+        <div id="highscore_lose" class="highscore"></div>
+        <button id="lose_restart" class="buttonPulse">Go again?</button>
+        <button id="lose_menu" class="buttonPulse"> Main menu</button>
       </div>
       <div id="level_complete" class="hidden">
         <h2>YOU WIN 🙌👍</h2>
-        <div id="final_score2"></div>
-        <button id="win_over" class="buttonPulse">Go again?</button>
-        <button id="start_over2" class="buttonPulse">Main menu</button>
+        <div id="score_win"></div>
+        <div id="final_win"></div>
+        <div id="highscore_win" class="highscore"></div>
+        <button id="win_restart" class="buttonPulse">Go again?</button>
+        <button id="win_menu" class="buttonPulse">Main menu</button>
       </div>
     </div>
     <div id="sound">
