--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clicker</title>
+    <title>Asteroid Scavenger</title>
     <link rel="stylesheet" href="spil.css" />
     <link rel="stylesheet" href="animations.css" />
   </head>
@@ -40,7 +40,7 @@
             <img id="score_image" src="grafik/product-bag.png" />
             <span id="score_count">0</span>
           </div>
-              <div id="accuracy_board">
+          <div id="accuracy_board">
             <img src="grafik/dart-board.png" />
             <span id="accuracy_count">???</span>
           </div>
@@ -48,15 +48,12 @@
             <div id="time_container">
               <div id="time_sprite"></div>
             </div>
-
-            <!-- <img id="time_count" src="grafik/sand-clock.png" /> -->
           </div>
           <div id="hp_board">
             <img id="hp1" class="alivege" src="grafik/astronaut.png" />
             <img id="hp2" class="alivege" src="grafik/astronaut.png" />
             <img id="hp3" class="alivege" src="grafik/astronaut.png" />
           </div>
-      
         </div>
         <div id="source">
           <p>
@@ -78,9 +75,11 @@
       </div>
       <div id="start" class="">
         <h2>ASTEROID SCAVENGER</h2>
-        <div>Your ship has crashed on an asteroid orbiting the intergalactic highway <br> 
-        Collect the necessary items in order to survive and escape <br>
-        Avoid the hostile aliens at all cost</div>
+        <div>
+          Your ship has crashed on an asteroid orbiting the intergalactic highway <br />
+          Collect the necessary items in order to survive and escape <br />
+          Avoid the hostile aliens at all cost
+        </div>
         <button id="press_start" class="buttonPulse">START</button>
       </div>
       <div id="game_over" class="hidden">
@@ -89,7 +88,7 @@
         <div id="final_lose"></div>
         <div id="highscore_lose" class="highscore"></div>
         <button id="lose_restart" class="buttonPulse">Go again?</button>
-        <button id="lose_menu" class="buttonPulse"> Main menu</button>
+        <button id="lose_menu" class="buttonPulse">Main menu</button>
       </div>
       <div id="level_complete" class="hidden">
         <h2>YOU WIN 🙌👍</h2>
